fixed overflow issue, other CSS, cleaned HTML/JS

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
-{box-sizing: border-box;}
 body {
     font-family: Verdana, sans-serif; 
+}
+html {
+    overflow-y: scroll;
 }
 
 /*MAP/TRAVEL CARD STYLES*/
 #directionsPanel{
     display:inline-block;
     float:right;
-    width:40%;
-    max-height: 400px;
-    height: auto;
+    height: 100%;
+    width: 38%;
     overflow-x: scroll;
 }
 #infoIcon{
@@ -19,17 +20,23 @@ body {
 }
 #travelInstructions{
   z-index: -1;
+  visibility: hidden;
   position: absolute;
-  height: 100%;
-  width: 98%;
+  height: inherit;
+  width: inherit;
   padding-top: 20px;
   pointer-events:none;
 }
 #map {
 
-    height: 400px;
-    width: 400px;
+    height: 100%;
+    width: 62%;
     display: inline-block;
+}
+.mapContainer{
+    align-self: center;
+    height: 450px;
+    width: inherit;
 }
 .originDestination{
     display: flex;
@@ -40,12 +47,7 @@ body {
 #routeDescription{
     display: flex;
 }
-.sliders{
-    display: flex;
-}
-.sliders > div{
-    flex: 1;
-}
+
 #submit{
     width:100%;
     height: 40px;
@@ -67,6 +69,9 @@ body {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
+.dots{
+    text-align: center;
+}
 .active {
   background-color: #717171;
 }
@@ -76,31 +81,22 @@ body {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    vertical-align: middle;
+.slideImg{
+    height: 50%;
+    width: 99%;
+    overflow: hidden;
 }
-.mySlides {display: none;}
-
-.slideshow-container {
+.slideshow-container { 
   max-width: 1000px;
+  max-height: 1000px;
   position: relative;
   margin: auto;
 }
-.slideImg{
-    height: 50%;
-    width: 100%;
-}
+
 
 .weather{
     font-family: Impact;
